# gcp-marketplace-minddash-services-backend

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile2  README.md  bash-dev.sh  bash-prd.sh  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  lint.yaml
api/: __init__.py
api/db_ddl/: db_init_marketplace.sql  ddl_billing.sql  ddl_functions.sql  ddl_insert_data.sql  ddl_tables.sql  dml_testing_functions.sql  pricing_ddl.sql  scripts_mindashdb.sql
api/models/: __init__.py  alert_models.py  billing_models.py  channel_models.py  chart_models.py  connection_models.py  data_access_models.py  metric_models.py  organization_models.py  product_models.py  project_models.py  prompt_and_example_models.py  quote_models.py  semantic_models copy.py  semantic_models.py  user_models.py
api/routes/: __init__.py  access_data_router.py  alert_router.py  billing_router.py  channel_router.py  chart_router.py  connection_router.py  data_access_router.py  metric_router.py  mindsdb_router.py  organization_router.py  pricing_router.py  product_router.py  project_router.py  prompts_and_examples_router.py  semantic_router.py
api/services/: __init__.py  alert_service.py  billing_service.py  channel_service.py  chart_service.py  connection_service.py  data_access_service.py  file_upload_service.py  gcs_client.py  metric_service.py  mindsdb_client.py  organization_service.py  product_service.py  project_service.py  prompts_and_examples_service.py  semantic_builder.py  semantic_profiling.py  user_service.py  (+1 more)
scripts/: db_init.py
(+8 files in other folders)
