[project]
name = "minddash-services-backend"
version = "0.1.0"
description = "Backend Mind Dash"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]==3.13.2",
    "certifi>=2025.11.12",
    "croniter==6.0.0",
    "databricks-sql-connector>=4.2.1",
    "email-validator==2.2.0",
    "fastapi[standard]>=0.122.0",
    "google-adk>=1.17.0",
    "google-cloud-aiplatform>=1.128.0",
    "google-cloud-pubsub==2.32.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage==2.18.2",
    "matplotlib>=3.10.7",
    "mindsdb-sdk==3.4.5",
    "numpy==1.26.4",
    "psycopg2-binary>=2.9.11",
    "pyyaml==6.0.2",
    "uvicorn>=0.38.0",
    "vertexai==1.43.0",
]

[dependency-groups]
dev = ["ruff>=0.15.0"]


[tool.ruff.lint]
ignore = ["E402", "F841", "F401"]
exclude = ["*.ipynb"]
